--- a/app/src/main/res/layout/activity_zenpadz10.xml
+++ b/app/src/main/res/layout/activity_zenpadz10.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".s500sa">
+    tools:context=".s500sa"
+    android:background="@color/white">
 
 
     <WebView
@@ -16,32 +17,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-
         android:id="@+id/textView47"
-
         android:layout_width="wrap_content"
-
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:layout_marginTop="102dp"
         android:background="@drawable/border"
         android:text="CPU  "
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView48"
         app:layout_constraintEnd_toStartOf="@+id/textView46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/youtubeView" />
 
     <TextView
-
         android:id="@+id/textView46"
-
         android:layout_width="212dp"
-
         android:layout_height="22dp"
         android:layout_marginTop="102dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="Hexa-core "
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView49"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView47"
@@ -50,26 +47,24 @@
     <TextView
         android:id="@+id/textView48"
         android:layout_width="wrap_content"
-
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="RAM  "
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView50"
         app:layout_constraintEnd_toStartOf="@+id/textView49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
     <TextView
-
         android:id="@+id/textView49"
-
         android:layout_width="212dp"
-
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="3GB"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView51"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -79,26 +74,24 @@
     <TextView
         android:id="@+id/textView50"
         android:layout_width="wrap_content"
-
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="GPU  "
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView52"
         app:layout_constraintEnd_toStartOf="@+id/textView51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
     <TextView
-
         android:id="@+id/textView51"
-
         android:layout_width="212dp"
-
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="Adreno 510 "
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView54"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView50"
@@ -107,11 +100,11 @@
     <TextView
         android:id="@+id/textView52"
         android:layout_width="wrap_content"
-
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="內存"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textView54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView50" />
@@ -119,25 +112,23 @@
     <TextView
         android:id="@+id/textView55"
         android:layout_width="wrap_content"
-
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
         android:text="螢幕  "
+        android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/textView53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView52" />
 
     <TextView
-
         android:id="@+id/textView53"
-
         android:layout_width="212dp"
-
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="9.7 inches"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView55"
         app:layout_constraintTop_toBottomOf="@+id/textView54" />
@@ -151,6 +142,7 @@
         android:layout_marginEnd="366dp"
         android:layout_marginBottom="22dp"
         android:text="簡介:"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -165,6 +157,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="61dp"
         android:text="ASUS ZenPad Z10 ZT500KL 採用一體成型金屬機身設計，搭載 9.7 吋 QXGA IPS 螢幕，高達 178 度可視角，無論看影片或玩遊戲，都呈現栩栩如生的畫質，配備雙立體揚聲器帶來身臨其境的音效，搭配耳機可享有 DTS 音質體驗。ASUS ZenPad Z10 ZT500KL 內建 7,800mAh 電量，具備 56 天待機時間，配置 USB Type-C，同時還擁有快速充電技術。"
+        android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,13 +166,12 @@
     <TextView
 
         android:id="@+id/textView54"
-
         android:layout_width="213dp"
-
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:text="32GB"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/textView53"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView52"
