--- a/app/src/main/res/layout/activity_accessories1_3.xml
+++ b/app/src/main/res/layout/activity_accessories1_3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".apple"
+    tools:context=".Accessories1_3"
     android:background="@color/white">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
