--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
     <!--主頁面佈局-->
     <LinearLayout
@@ -21,24 +22,28 @@
 
         <ImageButton
             android:id="@+id/btn_asus"
-            android:layout_width="274dp"
-            android:layout_height="136dp"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/pj1"
             tools:layout_editor_absoluteX="56dp"
             tools:layout_editor_absoluteY="68dp" />
 
         <ImageButton
             android:id="@+id/btn_acer"
-            android:layout_width="289dp"
-            android:layout_height="153dp"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/pj2"
             tools:layout_editor_absoluteX="49dp"
             tools:layout_editor_absoluteY="263dp" />
 
         <ImageButton
             android:id="@+id/btn_laptop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/pj3"
             tools:layout_editor_absoluteX="70dp"
             tools:layout_editor_absoluteY="451dp" />
@@ -66,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="零件" />
+            android:text="配件" />
 
         <Button
             android:id="@+id/btn_home"
