--- a/app/src/main/res/layout/activity_accessories3_1.xml
+++ b/app/src/main/res/layout/activity_accessories3_1.xml
@@ -22,4 +22,48 @@
         android:text="下一頁"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_mouse1"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rog_strix_impact_ii_rgb_" />
+
+    <ImageButton
+        android:id="@+id/btn_mouse2"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textmouse1"
+        app:srcCompat="@drawable/m100r_" />
+
+    <TextView
+        android:id="@+id/textmouse1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="ROG STRIX IMPACT II RGB 電競滑鼠"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mouse1" />
+
+    <TextView
+        android:id="@+id/textmouse2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="羅技 M100r 光學滑鼠 (黑)"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mouse2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
