--- a/app/src/main/res/layout/activity_accessories3_3.xml
+++ b/app/src/main/res/layout/activity_accessories3_3.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Accessories2_3"
+    tools:context=".Accessories3_3"
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/textkeyboard1_1"
+        android:id="@+id/textmouse1_1"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="50dp"
-        android:text="Razer Cynosa Lite 薩諾狼蛛Lite版鍵盤 台幣$1490"
+        android:text="羅技 M100r 光學滑鼠 (黑) 台幣$249"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.262"
@@ -21,18 +21,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textkeyboard1_2"
+        android:id="@+id/textmouse1_2"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="50dp"
-        android:text="柔軟緩衝的電競級按鍵，10鍵齊發不衝突防鬼鍵，1000Hz超快輪詢率，防潑水耐用設計。"
+        android:text="1000 dpi高解析度光學追蹤技術
+USB隨插即用，快速又容易，有線設計，免除更換電池的過程，雙手均適用的舒適設計"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textkeyboard1_1" />
+        app:layout_constraintTop_toBottomOf="@+id/textmouse1_1" />
 
     <TextView
-        android:id="@+id/textkeyboard1_3"
+        android:id="@+id/textmouse1_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -40,18 +41,22 @@
         android:text="簡介:"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textkeyboard1_2" />
+        app:layout_constraintTop_toBottomOf="@+id/textmouse1_2" />
 
     <TextView
-        android:id="@+id/textkeyboard1_4"
+        android:id="@+id/textmouse1_4"
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="RAZER CYNOSA CHROMA支援了Razer Chroma的RGB全彩發光效果，並能透過Razer Synapse 應用程式自訂光效。
-如果你以為所有的標準鍵盤用起來都差不多，那你就錯了。Razer Cynosa Lite 保留了所有的標準按鍵，而且還內建更多功能。它現在能夠展現高度遊戲效能，而且採用獨立背光按鍵，
-帶給你更多自訂空間!"
+        android:text="舒適、簡便，立即可用。這是一款全尺寸、雙手通用的滑鼠，簡單易用，隨時可用來解決您的需求。
+只需將連接線插入USB連接埠，這款簡單易用的滑鼠就已就緒待命。
+只需將連接線插入USB連接埠，M100r就已準備就緒可以使用。無須下載、
+不必設定，沒有麻煩。具有全尺寸、左右手可用設計，無論左手或右手，
+在長時間工作後仍能保持舒適。M100r在品質和可靠性方面，都具有羅技賴以成為世界滑鼠和鍵盤領導廠商的高標準。
+M100r可搭配 Windows、macOS 和 Linux使用。所以您可以放心無憂，確定其可搭配您的環境使用。
+"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textkeyboard1_3" />
+        app:layout_constraintTop_toBottomOf="@+id/textmouse1_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
