--- a/app/src/main/res/layout/activity_accessories1_1.xml
+++ b/app/src/main/res/layout/activity_accessories1_1.xml
@@ -21,10 +21,10 @@
 
     <TextView
         android:id="@+id/textheadphone1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="HyperX Cloud Flight S"
+        android:text="HyperX Cloud Flight S – 無線電競耳機 (HX-HSCFS-SG/WW)"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
