--- a/app/src/main/res/layout/activity_accessories4_1.xml
+++ b/app/src/main/res/layout/activity_accessories4_1.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Accessories2_1"
+    tools:context=".Accessories4_1"
     android:background="@color/white">
 
     <Button
-        android:id="@+id/btn_forward1_1"
+        android:id="@+id/btn_forward1_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="上一頁"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
-        android:id="@+id/btn_next1_2"
+        android:id="@+id/btn_next1_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="下一頁"
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn_keyboard1"
+        android:id="@+id/btn_videocard1"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:adjustViewBounds="true"
@@ -32,38 +32,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/irocks_k71m_rgb" />
+        app:srcCompat="@drawable/_geforce_gtx_1050_ti_aero_4g_ocv1_" />
 
     <ImageButton
-        android:id="@+id/btn_keyboard2"
+        android:id="@+id/btn_videocard2"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textkeyboard1"
-        app:srcCompat="@drawable/razer_cynosa_lite_" />
+        app:layout_constraintTop_toBottomOf="@+id/textvideocard1"
+        app:srcCompat="@drawable/_geforce_gtx1650_ventus_xs_4g_oc_" />
 
     <TextView
-        android:id="@+id/textkeyboard1"
+        android:id="@+id/textvideocard1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="irocks K71M RGB背光 機械式鍵盤-Gateron茶軸"
+        android:text="微星 GeForce GTX 1050 Ti AERO 4G OCV1 顯示卡"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_keyboard1" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_videocard1"/>
 
     <TextView
-        android:id="@+id/textkeyboard2"
+        android:id="@+id/textvideocard2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="Razer Cynosa Lite 薩諾狼蛛Lite版鍵盤"
+        android:text="微星 GeForce GTX1650 VENTUS XS 4G OC 顯示卡"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_keyboard2"/>
+        app:layout_constraintTop_toBottomOf="@+id/btn_videocard2"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
