--- a/app/src/main/res/layout/activity_asusme103_k.xml
+++ b/app/src/main/res/layout/activity_asusme103_k.xml
@@ -19,7 +19,7 @@
 
         android:id="@+id/textView47"
 
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
 
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
@@ -49,7 +49,7 @@
 
     <TextView
         android:id="@+id/textView48"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
 
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
@@ -78,7 +78,7 @@
 
     <TextView
         android:id="@+id/textView50"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
 
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
@@ -106,7 +106,7 @@
 
     <TextView
         android:id="@+id/textView52"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
 
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
@@ -118,7 +118,7 @@
 
     <TextView
         android:id="@+id/textView55"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
 
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
