--- a/app/src/main/res/layout/activity_imac24.xml
+++ b/app/src/main/res/layout/activity_imac24.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".s500sa">
+    tools:context=".imac24">
 
 
     <WebView
@@ -41,7 +41,7 @@
         android:layout_marginTop="102dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
-        android:text="Hexa-core "
+        android:text="Apple M1 晶片  "
         app:layout_constraintBottom_toTopOf="@+id/textView49"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView47"
@@ -69,7 +69,7 @@
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
-        android:text="3GB"
+        android:text="8GB(DDR4)"
         app:layout_constraintBottom_toTopOf="@+id/textView51"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -98,7 +98,7 @@
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
-        android:text="Adreno 510 "
+        android:text="Apple M1 晶片  "
         app:layout_constraintBottom_toTopOf="@+id/textView54"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView50"
@@ -111,7 +111,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="106dp"
         android:background="@drawable/border"
-        android:text="內存"
+        android:text="SSD  "
         app:layout_constraintEnd_toStartOf="@+id/textView54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView50" />
@@ -137,7 +137,7 @@
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
-        android:text="9.7 inches"
+        android:text='24"'
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView55"
         app:layout_constraintTop_toBottomOf="@+id/textView54" />
@@ -164,7 +164,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="61dp"
-        android:text="ASUS ZenPad Z10 ZT500KL 採用一體成型金屬機身設計，搭載 9.7 吋 QXGA IPS 螢幕，高達 178 度可視角，無論看影片或玩遊戲，都呈現栩栩如生的畫質，配備雙立體揚聲器帶來身臨其境的音效，搭配耳機可享有 DTS 音質體驗。ASUS ZenPad Z10 ZT500KL 內建 7,800mAh 電量，具備 56 天待機時間，配置 USB Type-C，同時還擁有快速充電技術。"
+        android:text="iMac 新篇章。 集 Apple 的精萃於一身，更因 M1 晶片 徹底改頭換面。在任何空間都是矚目焦點， 更能與你的生活完美契合。"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +179,7 @@
         android:layout_height="22dp"
         android:layout_marginEnd="59dp"
         android:background="@drawable/border"
-        android:text="32GB"
+        android:text="512GB"
         app:layout_constraintBottom_toTopOf="@+id/textView53"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView52"
